--- a/public/appData.json
+++ b/public/appData.json
@@ -1,5 +1,3 @@
-
-
 [
   {
     "image": "https://ibb.co/1f8nxjt7",
@@ -13,23 +11,23 @@
     "downloads": 1000000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 2000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 1500000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 3000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 7000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 40000000
       }
     ]
@@ -46,29 +44,28 @@
     "downloads": 5000000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 5000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 3000000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 6000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 12000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 99000000
       }
     ]
   },
- 
-  
+
   {
     "image": "https://i.ibb.co/Y47JTDQV/tiktok.png",
     "title": "TikTok",
@@ -81,23 +78,23 @@
     "downloads": 3500000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 4000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 3000000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 8000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 19000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 61000000
       }
     ]
@@ -114,28 +111,28 @@
     "downloads": 10000000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 3000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 2500000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 7000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 20000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 113000000
       }
     ]
   },
- 
+
   {
     "image": "https://ibb.co/5X2bC197",
     "title": "Slack",
@@ -148,23 +145,23 @@
     "downloads": 100000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 400000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 350000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 700000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 2000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 4050000
       }
     ]
@@ -181,23 +178,23 @@
     "downloads": 500000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 800000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 600000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 1500000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 5000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 10500000
       }
     ]
@@ -214,23 +211,23 @@
     "downloads": 150000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 400000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 300000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 700000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 3000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 7700000
       }
     ]
@@ -247,23 +244,23 @@
     "downloads": 2000000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 2000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 1500000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 4000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 20000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 82600000
       }
     ]
@@ -280,23 +277,23 @@
     "downloads": 1000000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 1500000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 1200000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 2500000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 8000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 22800000
       }
     ]
@@ -313,28 +310,28 @@
     "downloads": 2500000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 3000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 2500000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 7000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 12000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 25800000
       }
     ]
   },
-  
+
   {
     "image": "https://i.ibb.co/VpbPcP8v/reddit.png",
     "title": "Reddit",
@@ -347,23 +344,23 @@
     "downloads": 500000000,
     "ratings": [
       {
-        "name": "1 star",
+        "name": "1",
         "count": 1000000
       },
       {
-        "name": "2 star",
+        "name": "2",
         "count": 900000
       },
       {
-        "name": "3 star",
+        "name": "3",
         "count": 2000000
       },
       {
-        "name": "4 star",
+        "name": "4",
         "count": 6000000
       },
       {
-        "name": "5 star",
+        "name": "5",
         "count": 14100000
       }
     ]
